<resources>
    <string name="app_name">Mixer</string>
    <string name="players">Players</string>
    <string name="roll_teams">Roll Teams</string>
    <string name="team1">Team1</string>
    <string name="team2">Team2</string>
    <string name="player_name">Player name</string>
    <string name="value">Value</string>
    <string name="id">Id</string>
    <string name="give_up">Give up</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="back">back</string>
    <string name="clear_list">clear list</string>
    <string name="remove_player">remove player</string>
    <string name="new_player">new player</string>
    <string name="the_players_present_are">The players present are:</string>
    <string name="age">Age</string>
    <string name="agility">Agility</string>
    <string name="power">Power</string>
    <string name="height">Height</string>
    <string name="experience">Experience</string>
    <string name="add_10_players">Add 10 Players</string>
    <string name="player_id">Player id:</string>
    <string name="remove">Remove</string>
</resources>