<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/characteristicsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activitys.NewPlayerActivity21">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:baselineAligned="false"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="32sp" />


        <EditText
            android:id="@+id/experienceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/experience"
            android:inputType="number"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/powerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/power"
            android:inputType="number"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/height"
            android:inputType="number"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/agilityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/agility"
            android:inputType="number"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/age"
            android:inputType="number"
            android:textSize="32sp" />

    </LinearLayout>


    <Button
        android:id="@+id/giveUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addBtn"
        android:layout_alignEnd="@+id/addBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="380dp"
        android:text="@string/give_up"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="700dp"
        android:layout_marginEnd="64dp"
        android:text="@string/add"
        tools:ignore="ButtonStyle" />


</RelativeLayout>