<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity1">

    <Button
        android:id="@+id/playersBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/players"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rollTeamsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/roll_teams"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"

        app:layout_constraintBottom_toBottomOf="@+id/rollTeamsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playersBtn">

        <TextView
            android:id="@+id/team1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="350dp"
            android:gravity="center"
            android:text="@string/team1"
            android:textSize="32sp" />

        <ListView
            android:id="@+id/playersT1ListView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/team1TextView"
            android:layout_alignTop="@+id/team1TextView"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp" />

        <TextView
            android:id="@+id/team2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="350dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:gravity="center"
            android:text="@string/team2"
            android:textSize="32sp" />

        <ListView
            android:id="@+id/playersT2ListView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/team1TextView"
            android:layout_alignEnd="@+id/team2TextView"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="32dp" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>